realizo algunas correcciones a la segunda entrega

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,7 @@
     <section id="bienvenida">
         <h1>¡TE DAMOS LA BIENVENIDA A ENTRE PÁGINAS!</h1>
         <div class="imgFrase">
-            <img id="chicaLeyendo" src="./assets/images/chicaLeyendo.jpg" alt="imagen de una chica leyendo" height="400">
+            <img id="chicaLeyendo" src="./assets/images/chicaLeyendo.jpg" alt="imagen de una chica sentada en un sillón leyendo un libro">
             <p class="frase">"Un lector vive mil vidas antes de morir.<br> El que nunca lee solo vive una"<br> George R. R. Martin</p>
         </div>
     </section>
