--- a/pages/cajas.html
+++ b/pages/cajas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
 <body class="nuestrasCajas">
     <!-- inicio del header -->
     <header>
-        <img id="logo" src="../assets/images/logo1.png" alt="logo del sitio" width="130">
+        <img id="logo" src="../assets/images/logo1.png" alt="logo del sitio">
         
         <!-- menú de navegación -->
         <nav>
@@ -34,7 +34,7 @@
         <article id="romance" class="cajas">
             <h3 class="tituloCaja">Caja Romance</h3>
             <div class="imagenTexto">
-                <img src="../assets/images/romance.jpg" alt="imagen de una caja literaria abierta con libro de romance y regalos varios" width="500" height="400" class="imagenCajas">
+                <img src="../assets/images/romance.jpg" alt="imagen de una caja literaria abierta con libro de romance y regalos varios" class="imagenCajas">
                 <p class="textoCajas">¿Te encantan las historias de amor? Si te conmueves hasta las lágrimas con autoras como Jane Austen, o te enloquecen las comedias románticas de autoras como Ali Hazelwood. La caja romance es para ti. </p>
             </div>
         </article>    
@@ -42,7 +42,7 @@
         <article id="misterio" class="cajas">
             <h3 class="tituloCaja">Caja Misterio</h3>
             <div class="imagenTexto">
-                <img src="../assets/images/misterio.jpg" alt="imagen de una caja literaria abierta con libro de misterio y regalos varios" width="500" height="400" class="imagenCajas">
+                <img src="../assets/images/misterio.jpg" alt="imagen de una caja literaria abierta con libro de misterio y regalos varios" class="imagenCajas">
                 <p class="textoCajas">¿Te atraen las historias de intriga, suspenso o incluso terror? ¿Disfrutas las historias de Stephen King o Agatha Christie? Entonces la caja misterio es perfecta para ti. Está pensada para amantes del terror, de la novela negra y/o de las típicas historias de detectives.</p>
             </div>
         </article>
@@ -50,7 +50,7 @@
         <article id="fantasía" class="cajas">
             <h3 class="tituloCaja">Caja Fantasía</h3>
             <div class="imagenTexto">
-                <img src="../assets/images/fantasía.jpg" alt="imagen de una caja literaria abierta con libro de fantasía y regalos varios" width="500" height="400" class="imagenCajas">
+                <img src="../assets/images/fantasía.jpg" alt="imagen de una caja literaria abierta con libro de fantasía y regalos varios" class="imagenCajas">
                 <p class="textoCajas">La caja fantasía es ideal para aquellos lectores que disfrutan conocer nuevos mundos, así como sumergirse en historias rodeadas de magia y de grandes aventuras. Aquí podrás encontrarte autores como Brandon Sanderson y Leigh Bardugo.</p>
             </div>
         </article>
@@ -58,7 +58,7 @@
         <article id="sorpresa" class="cajas">
             <h3 class="tituloCaja">Caja sorpresa</h3>
             <div class="imagenTexto">
-                <img src="../assets/images/sorpresa.jpg" alt="imagen de una caja literaria cerrada" width="500" height="400" class="imagenCajas">
+                <img src="../assets/images/sorpresa.jpg" alt="imagen de una caja literaria cerrada" class="imagenCajas">
                 <p class="textoCajas">Si todas nuestras cajas te gustan y no logras decidirte, ¡no te preocuoes!. Nosotros lo hacemos por ti. Nos tomamos el atrevimiento (con tu permiso, claro) de elegir una de las tres novedades del mes y te la enviamos sin decirte cuál seleccionamos. Esta opción es solo para valientes.</p>
             </div>
         </article>
