--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
 <body class="paginaContacto">
     <!-- inicio del header -->
     <header>
-        <img id="logo" src="../assets/images/logo1.png" alt="logo del sitio" width="130">
+        <img id="logo" src="../assets/images/logo1.png" alt="logo del sitio">
         
         <!-- menú de navegación -->
         <nav>
@@ -41,7 +42,7 @@
             <input type="email" name="correo" id="correo" placeholder="correo electrónico" class="elementoForm">
             <br>
             <label for="comentario"></label>
-            <textarea name="comentario" id="comentario" cols="50" rows="10" placeholder="ingrese su mensaje" class="elementoForm"></textarea>
+            <textarea name="comentario" id="comentario" placeholder="ingrese su mensaje" class="elementoForm"></textarea>
             <br>
             <input type="checkbox" name="newsletter" id="newsletter" class="elementoForm">
             <label class="newsletter" for="newsletter">¿Quiéres suscribirte a nuestra newsletter?</label>
@@ -54,11 +55,11 @@
     <aside id="metodosContacto">
         <h3>También podes encontrarnos en</h3>
         <ul class="redes">
-            <li><a href="https://www.whatsapp.com/?lang=es_LA"><img src="../assets/images/whatsapp.png" alt="logo whatsapp" width="50"></a></li>
-            <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe"><img src="../assets/images/correo.png" alt="logo correo" width="50"></a></li>
-            <li><a href="https://www.instagram.com/"><img src="../assets/images/instagram.png" alt="logo instagram" width="50"></a></li>
-            <li><a href="https://www.facebook.com/?locale=es_LA"><img src="../assets/images/facebook.png" alt="logo facebook" width="50"></a></li>
-            <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"><img src="../assets/images/twitter.png" alt="logo twitter" width="50"></a></li>
+            <li><a href="https://www.whatsapp.com/?lang=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/whatsapp.png" alt="logo whatsapp"></a></li>
+            <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" target="_blanck"><img class="logoRedes" src="../assets/images/correo.png" alt="logo correo electrónico"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blanck"><img class="logoRedes" src="../assets/images/instagram.png" alt="logo instagram"></a></li>
+            <li><a href="https://www.facebook.com/?locale=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/facebook.png" alt="logo facebook"></a></li>
+            <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" target="_blanck"><img class="logoRedes" src="../assets/images/twitter.png" alt="logo twitter"></a></li>
         </ul>
     </aside> 
     </section>
