incorporo 2 paginas y bootstrap

--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -11,10 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
-    <title>Contactos | Entre páginas</title>
+    <title>¿Quiénes somos? | Entre páginas</title>
 </head>
 
-<body class="paginaContacto">
+<body class="quienesSomos">
     <!-- inicio del header -->
     <header>
         <!-- barra de navegación y logo del sitio -->
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../pages/cajas.html">CAJAS</a>
@@ -52,41 +52,23 @@
         </nav>
     </header>
 
-    <!-- sección de contacto y redes -->
-    <section class="contacto"> 
-    <h2>¡Sigamos en contacto!</h2>
-    <!-- formulario de contacto -->
-    <article id="formulario">
-        <h3>Déjanos tu mensaje</h3>
-        <form action="#">
-            <label for="nombre"></label>
-            <input type="text" name="nombre" id="nombre" placeholder="nombre" class="elementoForm">
-            <br>
-            <label for="correo"></label>
-            <input type="email" name="correo" id="correo" placeholder="correo electrónico" class="elementoForm">
-            <br>
-            <label for="comentario"></label>
-            <textarea name="comentario" id="comentario" placeholder="ingrese su mensaje" class="elementoForm"></textarea>
-            <br>
-            <input type="checkbox" name="newsletter" id="newsletter" class="elementoForm">
-            <label class="newsletter" for="newsletter">¿Quiéres suscribirte a nuestra newsletter?</label>
-            <br>
-            <button type="submit" id="enviar" class="elementoForm">Enviar</button>
-        </form>
+    <!-- sección de información sobre el equipo Entre Páginas -->
+    <article>
+        <h2>¿Quiénes somos?</h2>
+        <p>Entre páginas - cajas literarias nació de un grupo de apasionados por la lectura y por todos aquellos objetos relacionados a ella.
+        <br>
+        Creemos que el acto de leer es toda una experiencia en si misma y hay cosas que podemos incorporar para hacer ese momento aún mas mágico. ¿Acaso no se disfruta más de un buen libro cuando tenemos al lado una vela arómatica, una hermosa taza para nuestro café, un marca páginas que nos encante, entre otras cosas?
+        <br>
+        Es por esto que decidimos crear estas cajas. Están pensadas con la intención que nos brinden todo lo necesario para acompañar nuestros momentos de lectura.
+        <br>
+        Esperamos que disfrutes de nuestro trabajo y notes el cariño que ponemos al crear cada caja 💗
+        <br>
+        ¡Muchas gracias por eleginos!</p>
+        <p>Equipo Entre páginas</p>
+        <img src="../assets/images/libroFlores.jpg" alt="imagen de un libro abierto con flores saliendo de él">
     </article>
 
-    <!-- links a redes sociales y otras formas de contacto -->
-    <aside id="metodosContacto">
-        <h3>También podes encontrarnos en</h3>
-        <ul class="redes">
-            <li><a href="https://www.whatsapp.com/?lang=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/whatsapp.png" alt="logo whatsapp"></a></li>
-            <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" target="_blanck"><img class="logoRedes" src="../assets/images/correo.png" alt="logo correo electrónico"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blanck"><img class="logoRedes" src="../assets/images/instagram.png" alt="logo instagram"></a></li>
-            <li><a href="https://www.facebook.com/?locale=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/facebook.png" alt="logo facebook"></a></li>
-            <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" target="_blanck"><img class="logoRedes" src="../assets/images/twitter.png" alt="logo twitter"></a></li>
-        </ul>
-    </aside> 
-    </section>
+
     <!-- footer -->
     <footer>
         <a class="top" href="#logo">Ir al comienzo</a>
