--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -11,10 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
-    <title>Contactos | Entre páginas</title>
+    <title>Suscripciones | Entre páginas</title>
 </head>
 
-<body class="paginaContacto">
+<body class="nuestrasSuscripciones">
     <!-- inicio del header -->
     <header>
         <!-- barra de navegación y logo del sitio -->
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../pages/cajas.html">CAJAS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../pages/suscripciones.html">SUSCRIPCIONES</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/suscripciones.html">SUSCRIPCIONES</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">SOBRE NOSOTROS</a>
@@ -52,41 +52,44 @@
         </nav>
     </header>
 
-    <!-- sección de contacto y redes -->
-    <section class="contacto"> 
-    <h2>¡Sigamos en contacto!</h2>
-    <!-- formulario de contacto -->
-    <article id="formulario">
-        <h3>Déjanos tu mensaje</h3>
-        <form action="#">
-            <label for="nombre"></label>
-            <input type="text" name="nombre" id="nombre" placeholder="nombre" class="elementoForm">
-            <br>
-            <label for="correo"></label>
-            <input type="email" name="correo" id="correo" placeholder="correo electrónico" class="elementoForm">
-            <br>
-            <label for="comentario"></label>
-            <textarea name="comentario" id="comentario" placeholder="ingrese su mensaje" class="elementoForm"></textarea>
-            <br>
-            <input type="checkbox" name="newsletter" id="newsletter" class="elementoForm">
-            <label class="newsletter" for="newsletter">¿Quiéres suscribirte a nuestra newsletter?</label>
-            <br>
-            <button type="submit" id="enviar" class="elementoForm">Enviar</button>
-        </form>
-    </article>
-
-    <!-- links a redes sociales y otras formas de contacto -->
-    <aside id="metodosContacto">
-        <h3>También podes encontrarnos en</h3>
-        <ul class="redes">
-            <li><a href="https://www.whatsapp.com/?lang=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/whatsapp.png" alt="logo whatsapp"></a></li>
-            <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" target="_blanck"><img class="logoRedes" src="../assets/images/correo.png" alt="logo correo electrónico"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blanck"><img class="logoRedes" src="../assets/images/instagram.png" alt="logo instagram"></a></li>
-            <li><a href="https://www.facebook.com/?locale=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/facebook.png" alt="logo facebook"></a></li>
-            <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" target="_blanck"><img class="logoRedes" src="../assets/images/twitter.png" alt="logo twitter"></a></li>
-        </ul>
-    </aside> 
+    <!-- sección de descripción de los planes de suscripción -->
+    <section class="suscripciones">
+        <h2>Elige el plan que mejor se adapte a ti</h2>
+        <div class="container">
+            <div class="row">
+                <div class="card col-12 col-md-6 col-lg-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Compra única</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-md-6 col-lg-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Suscripción trimestral</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-md-6 col-lg-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Suscripción bimestral</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                    </div>
+                </div>
+                <div class="card col-12 col-md-6 col-lg-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Suscripción mensual</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    
+
     <!-- footer -->
     <footer>
         <a class="top" href="#logo">Ir al comienzo</a>
