--- a/index.html
+++ b/index.html
@@ -4,28 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/images/logo1.png" type="image/x-icon">
-    <title>Entre páginas | cajas literarias</title>
+    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+    <title>Entre páginas | Cajas literarias</title>
 </head>
 
 <body class="inicio">
     <!-- inicio del header -->
     <header>
-        <img id="logo" src="./assets/images/logo1.png" alt="logo del sitio">
-        
-        <!-- menú de navegación -->
-        <nav>
-            <ul class="menu">
-                <li class="elemento"><a href="./index.html">INICIO</a></li>
-                <li class="elemento"><a href="./pages/cajas.html">CAJAS</a></li>
-                <li class="elemento"><a href="./pages/contacto.html">CONTACTO</a></li>
-            </ul>
-        </nav> 
+        <!-- barra de navegación y logo del sitio -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html"><img id="logo" src="./assets/images/logo.png" alt="logo del sitio"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./pages/cajas.html">CAJAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./pages/suscripciones.html">SUSCRIPCIONES</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">SOBRE NOSOTROS</a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item">
+                                    <a class="dropdown-item" href="./pages/quienesSomos.html">¿QUIÉNES SOMOS?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" href="./pages/contacto.html">CONTACTO</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>    
+            </div>
+        </nav>
     </header>
 
     <!-- sección de bienvenida al sitio con imagen y frase -->
@@ -50,7 +74,7 @@
   
     <!-- video de ejemplo de caja literaria -->
     <aside class="unboxing">
-            <h3>Nuestras cajas</h3>
+            <h2>Nuestras cajas</h2>
             <video class="video" src="./assets/videos/videoCaja.mp4" autoplay loop controls></video>
     </aside>
     
@@ -59,5 +83,7 @@
         <a class="top" href="#logo">Ir al comienzo</a>
         <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html> 
