--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -35,16 +35,11 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../pages/suscripciones.html">SUSCRIPCIONES</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">SOBRE NOSOTROS</a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" href="../pages/quienesSomos.html">¿QUIÉNES SOMOS?</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="../pages/contacto.html">CONTACTO</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                         </li>
                     </ul>
                 </div>    
@@ -53,20 +48,18 @@
     </header>
 
     <!-- sección de información sobre el equipo Entre Páginas -->
-    <article>
+    <section class="sobreNosotros">
         <h2>¿Quiénes somos?</h2>
-        <p>Entre páginas - cajas literarias nació de un grupo de apasionados por la lectura y por todos aquellos objetos relacionados a ella.
-        <br>
-        Creemos que el acto de leer es toda una experiencia en si misma y hay cosas que podemos incorporar para hacer ese momento aún mas mágico. ¿Acaso no se disfruta más de un buen libro cuando tenemos al lado una vela arómatica, una hermosa taza para nuestro café, un marca páginas que nos encante, entre otras cosas?
-        <br>
-        Es por esto que decidimos crear estas cajas. Están pensadas con la intención que nos brinden todo lo necesario para acompañar nuestros momentos de lectura.
-        <br>
-        Esperamos que disfrutes de nuestro trabajo y notes el cariño que ponemos al crear cada caja 💗
-        <br>
-        ¡Muchas gracias por eleginos!</p>
-        <p>Equipo Entre páginas</p>
-        <img src="../assets/images/libroFlores.jpg" alt="imagen de un libro abierto con flores saliendo de él">
-    </article>
+        <article class="infoNosotros">
+            <p>Entre páginas - cajas literarias nació de un grupo de personas apasionadas por la lectura y por todos aquellos objetos relacionados a ella. Creemos que el acto de leer es toda una experiencia en si misma y hay cosas que podemos incorporar para hacer ese momento aún mas mágico. ¿Acaso no se disfruta más de un buen libro cuando tenemos al lado una vela arómatica, una hermosa taza para nuestro café, un marca páginas que nos encante, entre otras cosas?</p>
+            <p>Es por esto que decidimos crear estas cajas. Están pensadas con la intención que nos brinden todo lo necesario para acompañar nuestros momentos de lectura.</p>
+            <p>Esperamos que disfrutes de nuestro trabajo y notes el cariño que ponemos al crear cada caja. ¡Muchas gracias por eleginos! 💗</p>
+            <p>Equipo Entre páginas</p>
+        </article>
+        <aside class="libroNosotros">
+            <img src="../assets/images/libroFlores.jpg" alt="imagen de un libro abierto con flores y mariposas saliendo de las páginas">
+        </aside>    
+    </section>
 
 
     <!-- footer -->
