--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../pages/cajas.html">CAJAS</a>
@@ -35,16 +35,11 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="../pages/suscripciones.html">SUSCRIPCIONES</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">SOBRE NOSOTROS</a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" href="../pages/quienesSomos.html">¿QUIÉNES SOMOS?</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="../pages/contacto.html">CONTACTO</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                         </li>
                     </ul>
                 </div>    
@@ -63,7 +58,7 @@
             <input type="text" name="nombre" id="nombre" placeholder="nombre" class="elementoForm">
             <br>
             <label for="correo"></label>
-            <input type="email" name="correo" id="correo" placeholder="correo electrónico" class="elementoForm">
+            <input type="email" name="correo" id="correo" placeholder="correo electrónico" class="elementoForm" >
             <br>
             <label for="comentario"></label>
             <textarea name="comentario" id="comentario" placeholder="ingrese su mensaje" class="elementoForm"></textarea>
