--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -33,18 +33,13 @@
                             <a class="nav-link" aria-current="page" href="../pages/cajas.html">CAJAS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/suscripciones.html">SUSCRIPCIONES</a>
+                            <a class="nav-link" aria-current="page" href="../pages/suscripciones.html">SUSCRIPCIONES</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">SOBRE NOSOTROS</a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" href="../pages/quienesSomos.html">¿QUIÉNES SOMOS?</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="../pages/contacto.html">CONTACTO</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
                         </li>
                     </ul>
                 </div>    
@@ -55,38 +50,62 @@
     <!-- sección de descripción de los planes de suscripción -->
     <section class="suscripciones">
         <h2>Elige el plan que mejor se adapte a ti</h2>
-        <div class="container">
+        <article class="container">
             <div class="row">
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Compra única</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                        <ul class="card-text descripcionSuscripciones">
+                            <li>Un libro (temática a elección)</li>
+                            <li>Regalos relacionados al libro y/o lectura</li>
+                            <li>Playlist de Spotify</li>
+                            <p class="precio">$9000</p>
+                            <p class="envío">Pago único + envío</p>
+                        </ul>
+                        <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Suscripción trimestral</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                        <ul class="card-text descripcionSuscripciones">
+                            <li>Un libro cada tres meses (temática a elección)</li>
+                            <li>Regalos relacionados al libro y/o lectura</li>
+                            <li>Playlist de Spotify</li>
+                            <p class="precio">$8900</p>
+                            <p class="envío">Pago trimestral + envío</p>
+                        </ul>
+                        <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Suscripción bimestral</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                        <ul class="card-text descripcionSuscripciones">
+                            <li>Un libro cada dos meses (temática a elección)</li>
+                            <li>Regalos relacionados al libro y/o lectura</li>
+                            <li>Playlist de Spotify</li>
+                            <p class="precio">$7800</p>
+                            <p class="envío">Pago bimestral + envío</p>
+                        </ul>
+                        <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Suscripción mensual</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Suscribirse</a>
+                        <ul class="card-text descripcionSuscripciones">
+                            <li>Un libro (temática a elección)</li>
+                            <li>Regalos relacionados al libro y/o lectura</li>
+                            <li>Playlist de Spotify</li>
+                            <p class="precio">$6500</p>
+                            <p class="envío">Pago mensual + envío</p>
+                        </ul>
+                        <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
             </div>
-        </div>
+        </article>
     </section>
     
 
