--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     <!-- tutorial para comprar servicio -->
     <article id="tutorial">
         <h2>¿Cómo funciona nuestro servicio?</h2>
-        <div class="pasos">
+        <main class="pasos">
             <ul class="pasos">
-                <li>1. Encuentra tu caja ideal</li>
-                <li>2. Pide tu caja por compra única o por suscripción</li>
-                <li>3. Recibe el paquete en tu domicilio</li>
-                <li>4. Abre tu caja... y ¡disfruta!</li>
+                <li class="paso1">1. Encuentra tu caja ideal</li>
+                <li class="paso2">2. Pide tu caja por compra única o por suscripción</li>
+                <li class="paso3">3. Recibe el paquete en tu domicilio</li>
+                <li class="paso4">4. Abre tu caja... y ¡disfruta!</li>
             </ul>
-        </div>
+        </main>
     </article>
   
     <!-- video de ejemplo de caja literaria -->
