--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,26 +49,26 @@
 
     <!-- sección de contacto y redes -->
     <section class="contacto"> 
-    <h2>¡Sigamos en contacto!</h2>
-    <!-- formulario de contacto -->
-    <article id="formulario">
-        <h3>Déjanos tu mensaje</h3>
-        <form action="#">
-            <label for="nombre"></label>
-            <input type="text" name="nombre" id="nombre" placeholder="nombre" class="elementoForm">
-            <br>
-            <label for="correo"></label>
-            <input type="email" name="correo" id="correo" placeholder="correo electrónico" class="elementoForm" >
-            <br>
-            <label for="comentario"></label>
-            <textarea name="comentario" id="comentario" placeholder="ingrese su mensaje" class="elementoForm"></textarea>
-            <br>
-            <input type="checkbox" name="newsletter" id="newsletter" class="elementoForm">
-            <label class="newsletter" for="newsletter">¿Quiéres suscribirte a nuestra newsletter?</label>
-            <br>
-            <button type="submit" id="enviar" class="elementoForm">Enviar</button>
-        </form>
-    </article>
+        <h2>¡Sigamos en contacto!</h2>
+        <!-- formulario de contacto -->
+        <article id="formulario">
+            <h3>Déjanos tu mensaje</h3>
+            <form action="#">
+                <label for="nombre"></label>
+                <input type="text" name="nombre" id="nombre" class="elementoForm" placeholder="Tu nombre">
+                <br>
+                <label for="correo"></label>
+                <input type="email" name="correo" id="correo" class="elementoForm" placeholder="Correo electrónico">
+                <br>
+                <label for="comentario"></label>
+                <textarea name="comentario" id="comentario" class="elementoForm" placeholder="Ingresa aquí tu mensaje"></textarea>
+                <br>
+                <input type="checkbox" name="newsletter" id="checkbox" class="newsletter">
+                <label class="newsletter" for="newsletter">¿Quiéres suscribirte a nuestra newsletter?</label>
+                <br>
+                <button type="submit" id="enviar" class="elementoForm">Enviar</button>
+            </form>
+        </article>
 
     <!-- links a redes sociales y otras formas de contacto -->
     <aside id="metodosContacto">
