--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -50,57 +50,65 @@
     <!-- sección de descripción de los planes de suscripción -->
     <section class="suscripciones">
         <h2>Elige el plan que mejor se adapte a ti</h2>
-        <article class="container">
+        <article class="container-fluid">
             <div class="row">
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Compra única</h5>
-                        <ul class="card-text descripcionSuscripciones">
-                            <li>Un libro (temática a elección)</li>
-                            <li>Regalos relacionados al libro y/o lectura</li>
-                            <li>Playlist de Spotify</li>
-                            <p class="precio">$9000</p>
-                            <p class="envío">Pago único + envío</p>
-                        </ul>
+                        <div class="descripcionSuscripciones">
+                            <p class="card-text">
+                                Un libro (temática a elección) <br>
+                                Regalos relacionados al libro y/o lectura <br>
+                                Playlist de Spotify <br>
+                                Pago único + envío <br>
+                            </p>
+                            <p class="precio">$9800</p>
+                        </div>
                         <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Suscripción trimestral</h5>
-                        <ul class="card-text descripcionSuscripciones">
-                            <li>Un libro cada tres meses (temática a elección)</li>
-                            <li>Regalos relacionados al libro y/o lectura</li>
-                            <li>Playlist de Spotify</li>
-                            <p class="precio">$8900</p>
-                            <p class="envío">Pago trimestral + envío</p>
-                        </ul>
+                        <div class="descripcionSuscripciones">
+                            <p class="card-text">
+                                Un libro cada tres meses (temática a elección) <br>
+                                Regalos relacionados al libro y/o lectura <br>
+                                Playlist de Spotify <br>
+                                Pago trimestral + envío <br>
+                            </p>
+                            <p class="precio">$8700</p>
+                        </div>
                         <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Suscripción bimestral</h5>
-                        <ul class="card-text descripcionSuscripciones">
-                            <li>Un libro cada dos meses (temática a elección)</li>
-                            <li>Regalos relacionados al libro y/o lectura</li>
-                            <li>Playlist de Spotify</li>
+                        <div class="descripcionSuscripciones">
+                            <p class="card-text">
+                                Un libro cada dos meses (temática a elección) <br>
+                                Regalos relacionados al libro y/o lectura <br>
+                                Playlist de Spotify <br>
+                                Pago bimestral + envío <br>
+                            </p>
                             <p class="precio">$7800</p>
-                            <p class="envío">Pago bimestral + envío</p>
-                        </ul>
+                        </div>
                         <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
                         <h5 class="card-title">Suscripción mensual</h5>
-                        <ul class="card-text descripcionSuscripciones">
-                            <li>Un libro (temática a elección)</li>
-                            <li>Regalos relacionados al libro y/o lectura</li>
-                            <li>Playlist de Spotify</li>
-                            <p class="precio">$6500</p>
-                            <p class="envío">Pago mensual + envío</p>
-                        </ul>
+                        <div class="descripcionSuscripciones">
+                            <p class="card-text">
+                                Un libro al mes (temática a elección) <br>
+                                Regalos relacionados al libro y/o lectura <br>
+                                Playlist de Spotify <br>
+                                Pago mensual + envío <br>
+                            </p>
+                            <p class="precio">$6700</p>
+                        </div>
                         <a href="#" class="btn btn-dark">Lo quiero</a>
                     </div>
                 </div>
@@ -108,7 +116,6 @@
         </article>
     </section>
     
-
     <!-- footer -->
     <footer>
         <a class="top" href="#logo">Ir al comienzo</a>
